# Projeto_Previsao_Valor_Veiculo

./: README.md  pyproject.toml
Code/: Previsao_Preco_Veiculos.ipynb  config.py
Data/: modelo_treinado_veiculos.pk
